<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:background="@color/orange"
    android:backgroundTint="@color/orange"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamname" />

        <TextView
            android:id="@+id/amountOfPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amountofplayers" />

        <TextView
            android:id="@+id/players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/players" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
