<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.AddFragment">

    <EditText
        android:id="@+id/etTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"
        android:textColorHint="@color/orange" />

    <EditText
        android:id="@+id/etPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_players"
        android:textColorHint="@color/orange" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/add_team" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


</LinearLayout>